ags (0.7.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented resetting samplerate, buffer size and format. Thus added properties to AgsAudio and AgsChannel.
	* implemented ags_audio_file_check_suffix() and ags_ipatch_check_suffix()
	* TODO implemented ags_input_open_file()
	* implemented soundcard property of AgsIpatch
	* implemented preset, instrument and sample property of AgsAudioFileLink
	* refactored replacing template AgsAudioSignal as adding new template
	* improved mutices in ags_audio_open_files()

ags (0.7.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing parsing of alsa-handle key of configuration within AGS simple file
	* fixed AgsExportThread JIFFIE and AGS_THREAD_START_SYNCED_FREQ flag
	* fine-tuned performance and thus providing some fixes

ags (0.7.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-count-beats recall to ommit tics
	* fixed timing issue of toplevel AgsThread limit nanosleep() to band
	* fixed missing read of config values in ags_soundcard_thread() to calculate its frequency
	* improved ref/unref AgsAudioSignal because it wasn't properly done
	* modified ags_recall_recycling.c to not cache AgsAudioSignal
	* modified default frequency to 1000 Hz and buffer size of 512

ags (0.7.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock caused by adjusting buffer size or samplerate as reading config from file
	* fixed really bad memory leak during playback of audio signal on AgsInput because of missing g_object_unref()
	* fixed ags_notation_test.c - it crashed because of wrong data type for ags_note_new_with_offset()
	* implemented properties of AgsNote

ags (0.7.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ommiting delayed playback in ags_play_notation_audio_run.c
	* fixed crash during load of lv2 directories without manifest.ttl
	* fixed don't queue draw destroyed widgets