@@ -845,6 +845,7 @@ libags_audio_task_h_sources = \
 	ags/audio/task/ags_append_audio_threaded.h \
 	ags/audio/task/ags_append_channel.h \
 	ags/audio/task/ags_append_recall.h \
+	ags/audio/task/ags_apply_presets.h \
 	ags/audio/task/ags_apply_synth.h \
 	ags/audio/task/ags_apply_wavetable.h \
 	ags/audio/task/ags_audio_set_recycling.h \
@@ -899,6 +900,7 @@ libags_audio_task_c_sources = \
 	ags/audio/task/ags_append_audio_threaded.c \
 	ags/audio/task/ags_append_channel.c \
 	ags/audio/task/ags_append_recall.c \
+	ags/audio/task/ags_apply_presets.c \
 	ags/audio/task/ags_apply_synth.c \
 	ags/audio/task/ags_apply_wavetable.c \
 	ags/audio/task/ags_audio_set_recycling.c \
